--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
-    <title>google map</title>
+    <title>foodmap</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="aster.css">
