ise local files

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="aster.css">
     <link rel="stylesheet" type="text/css" href="radar.css">
     <link rel="stylesheet" type="text/css" href="imgbar.css">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDdpTRtQThkem_nD955vK_U9tEHifWbkOY"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js'></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
