--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" type="text/css" href="aster.css">
     <link rel="stylesheet" type="text/css" href="radar.css">
     <link rel="stylesheet" type="text/css" href="imgbar.css">
-    <script src="jquery.min.js"></script>
+    <script src="jquery.min.js"></script><!--version 3.1.1-->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDdpTRtQThkem_nD955vK_U9tEHifWbkOY"></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js'></script>
+    <script src='d3.min.js'></script><!--version 3.4.11-->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script src="d3.v3.min.js" charset="utf-8"></script><!--http://d3js.org/d3.v3.min.js-->
+    <script src="d3.tip.v0.6.3.js"></script><!--http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js-->
     <script src="mapstyles.js"></script>
     <script src="foodinfo.js"></script>
     <script src="aster_data.js"></script>
